tests/NormalTests/paczka2/big_fuzzy/46665357.err
Error in line 3: nBvAIgTI2 A991 73,26
Error in line 5: nBvAIgTI2 A991 248,0
Error in line 19: A82 A82 86,5
Error in line 20: 0gG6 A82 88,5
Error in line 34: ILo218rI2b S117 62,0
Error in line 33: r69 A82 86,3
Error in line 50: x5zSUw2 A991 82,23
Error in line 57: x5zSUw2 A991 18,9
Error in line 61: x5zSUw2 S117 7,6
Error in line 72: nBvAIgTI2 S117 1,8
Error in line 84: r69 A919 34,9
Error in line 73: 0gG6 A82 302,2
Error in line 91: A82 S117 25,9
Error in line 98: ILo218rI2b A919 -6,57
Error in line 104: nBvAIgTI2 S117 8,4
Error in line 97: x5zSUw2 A919 34,2
Error in line 112: A82 A82 53,3
Error in line 111: nBvAIgTI2 S117 18,6
Error in line 83: ILo218rI2b A919 89,0
Error in line 114: A82 A919 4,1
Error in line 109: x5zSUw2 S117 97,4
Error in line 130: 7J7vsZOJQJ A82 409,08
Error in line 131: r69 A919 38,8
Error in line 146: x5zSUw2 A82 23,83
Error in line 143: A82 A82 28,1
Error in line 147: 0gG6 S117 23,9
Error in line 154: x5zSUw2 S117 56,6
Error in line 152: ILo218rI2b A991 42,7
Error in line 155: x5zSUw2 A919 55,1
Error in line 140: 7J7vsZOJQJ A82 53,8
Error in line 162: ILo218rI2b A919 92,5
Error in line 170: ILo218rI2b A991 30,8
Error in line 176: A82 A82 57,6
Error in line 189: ILo218rI2b A919 76,68
Error in line 172: nBvAIgTI2 A991 0,7
Error in line 195: nBvAIgTI2 S117 19,5
Error in line 200: 0gG6 A991 86,0
Error in line 220: nBvAIgTI2 A991 85,7
Error in line 218: x5zSUw2 A919 7,0
Error in line 233: x5zSUw2 A991 279,7
